[package]
name = "todo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
colored = "2.0.4"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }

[[bin]]
name = "todo"
path = "src/main.rs"